implementando mp checkout

--- a/src/app/features/accommodations/accommodations.component.html
+++ b/src/app/features/accommodations/accommodations.component.html
@@ -158,10 +158,10 @@
                 
                 <!-- Precio y botón de reserva -->
                 <div class="room-price-container">
-                  <div class="room-price">
+                  <!-- <div class="room-price">
                     <span class="price">{{room.pricePerNight}}€</span> / noche
                     <small>*Precios por habitación, desayuno incluido, IVA incluido</small>
-                  </div>
+                  </div> -->
                   <a routerLink="/reservar" [queryParams]="{roomType: room.type}" class="btn btn-primary">Reservar ahora</a>
                 </div>
               </div>
