--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -125,9 +125,9 @@
     <div class="row g-4" *ngIf="!isLoadingServices">
       <div *ngFor="let service of services" class="col-md-3 col-sm-6">
         <div class="amenity-card text-center">
-          <div class="amenity-icon">
+          <!-- <div class="amenity-icon">
             <i [class]="service.icon"></i>
-          </div>
+          </div> -->
           <h5>{{service.name}}</h5>
           <p>{{service.description}}</p>
         </div>
