--- a/src/app/features/booking/booking.component.html
+++ b/src/app/features/booking/booking.component.html
@@ -33,7 +33,7 @@
           
           <div class="step-divider"></div>
           
-          <div class="step">
+          <!-- <div class="step">
             <div class="step-icon">
               <i class="fas fa-bed"></i>
             </div>
@@ -44,13 +44,13 @@
           </div>
           
           <div class="step-divider"></div>
-          
+           -->
           <div class="step">
             <div class="step-icon">
               <i class="fas fa-user"></i>
             </div>
             <div class="step-content">
-              <h6>Paso 3</h6>
+              <h6>Paso 2</h6>
               <p>Tus datos</p>
             </div>
           </div>
@@ -62,7 +62,7 @@
               <i class="fas fa-check-circle"></i>
             </div>
             <div class="step-content">
-              <h6>Paso 4</h6>
+              <h6>Paso 3</h6>
               <p>Confirmación</p>
             </div>
           </div>
